--- a/style.css
+++ b/style.css
@@ -184,3 +184,21 @@
         transform:rotate(360deg);
     }
 }
+
+/* ESERCIZIO 11 */
+.ex-11-icon:hover {
+    animation-duration: 5000ms;
+    animation-name: respin;
+}
+
+@keyframes respin {
+    0% {
+        transform:rotate(0deg);
+    }
+    75% {
+        transform:rotate(270deg);
+    }
+    0% {
+        transform: rotate(0deg);
+    }
+}
